# aoc-24

./: .gitignore  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  pyproject.toml
